--- a/Lab5_ArielPerez/nbproject/project.properties
+++ b/Lab5_ArielPerez/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=lab5_arielperez.Lab5_ArielPerez
+main.class=lab5_arielperez.Inicio
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
